# hide-and-seek-ml

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: being.cpp  game.cpp  helper_funcs.cpp  hider.cpp  keyboard_controller.cpp  manual_word.cpp  neural_controller.cpp  obstacles.cpp  seeker.cpp  sim_world.cpp  world.cpp
src/include/: being.h  constants.h  controller.h  game.h  game_objects.h  helper_funcs.h  hider.h  keyboard_controller.h  manual_world.h  neural_controller.h  obstacles.h  seeker.h  sim_world.h  world.h
